# docs/swagger.json
@@ -9,37 +9,29 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/debug": {
-            "get": {
-                "description": "Get lots of info from running container headers/ips",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Debug",
-                "operationId": "debug",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/env": {
+        "/a/env": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get the env variables available to the api. This is behind auth",
+                "description": "Get the env variables available to the api. This is behind auth under /a/",
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Get environment variables",
                 "operationId": "env",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer",
+                        "description": "Bearer token from app logs",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -57,6 +49,24 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/debug": {
+            "get": {
+                "description": "Get lots of info from running container headers/ips",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Debug",
+                "operationId": "debug",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -169,6 +179,14 @@
                     }
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and the token from the app logs on startup.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
